--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,22 +4,43 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/style.css">
 
     </head>
     <body>
 
-        <div class="site">
+        
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
           </div>
+		  
+		<header class="header">
+            <div class="row">
+                <div class="columns six">
+                    <div class="logo-wrap">
+                        <a class="logo-link" href="/">{{ site.name }}</a>
+                    </div>
+                </div>
+                <div class="columns six">
+                    <nav class="nav">
+                        <ul class="menu">
+                            <li class="menu-item"><a href="/">Home</a></li>
+                            <li class="menu-item"><a href="/">About</a></li>
+                            <li class="menu-item"><a href="/">Archives</a></li>
+                            <li class="menu-item"><a href="#">Resume</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <hr>
+            </div>
+        </header>
 
           {{ content }}
 
@@ -38,7 +59,7 @@
               </p>
             </div>
           </div>
-        </div>
+         
 
     </body>
 </html>
