--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,8 @@
                     <nav class="nav">
                         <ul class="menu">
                             <li class="menu-item"><a href="/">Home</a></li>
-                            <li class="menu-item"><a href="/">About</a></li>
-                            <li class="menu-item"><a href="/">Archives</a></li>
-                            <li class="menu-item"><a href="#">Resume</a></li>
+                            <li class="menu-item"><a href="/about.html">About</a></li>
+                            <li class="menu-item"><a href="/archives.html">Archives</a></li>
                         </ul>
                     </nav>
                 </div>
