--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 		
 		<div class="main">
 			<div class="row">
-				<div class="columns eight offset-by-two">
+				<div class="columns ten offset-by-one">
 				
 					{{ content }}
 					
