--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="{{ page.meta }}">
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css">
 
     </head>
     <body>
@@ -25,9 +27,10 @@
                 <div class="columns six">
                     <nav class="nav">
                         <ul class="menu">
-                            <li class="menu-item"><a href="/">Home</a></li>
-                            <li class="menu-item"><a href="/about.html">About</a></li>
-                            <li class="menu-item"><a href="/archives.html">Archives</a></li>
+                            <li class="menu-item"><a class="{% if page.url == '/index.html' %}current{% endif %}" href="/">Blog</a></li>
+                            <li class="menu-item"><a class="{% if page.url == '/about-me.html' %}current{% endif %}" href="/about-me.html">About me</a></li>
+							<li class="menu-item"><a href="/mithicherbaro.pdf">Resume</a></li>
+                            <!--<li class="menu-item"><a class="{% if page.url == 'index.html' %}current{% endif %}" href="/archives.html">Archives</a></li>-->
                         </ul>
                     </nav>
                 </div>
@@ -35,32 +38,54 @@
             </div>
         </header>
 		
-		<div class="main">
-			<div class="row">
-				<div class="columns ten offset-by-one">
-				
-					{{ content }}
+		
+		{{ content }}
 					
-				</div>
-			</div>
-		</div>
-
+		 
         <footer class="footer">
             <div class="row">
                 <div class="columns six">
                     <ul class="social inline-list">
                         <li>Follow Me</li>
-                        <li><a class="tw" href="#">Twitter</a></li>
-                        <li><a class="ln" href="#">Linkedin</a></li>
-                        <li><a class="gh" href="#">Github</a></li>
+                        <li><a class="tw" title="Follow me on Twitter" href="https://twitter.com/mithicher">Twitter</a></li>
+						<li><a class="" title="Follow me on Codepen"  href="http://codepen.io/mithicher/">Codepen</a>
+                        <li><a class="gh" title="Find me on Github" href="https://github.com/mithicher/">Github</a></li>
                     </ul>
                 </div>
                 <div class="columns six">
-                    <p>Powered by <a href="#">Github</a> with <a href="#">Jekyll</a>.</p>
+                    <p>Powered by <a href="https://github.com/">Github</a> with <a href="http://jekyllrb.com">Jekyll</a>.</p>
                 </div>
             </div>
         </footer>
-         
+        
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script type="text/javascript">
+		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+		var disqus_shortname = 'mithicher-github'; // required: replace example with your forum shortname
+
+		/* * * DON'T EDIT BELOW THIS LINE * * */
+		(function () {
+			var s = document.createElement('script'); s.async = true;
+			s.type = 'text/javascript';
+			s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+			(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+		}());
+		</script>
+		
+		<script>
+			$('#hero-content').addClass('animated bounceInLeft');
+		</script>
+		
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-50695962-1', 'mithicher.github.io');
+		  ga('send', 'pageview');
+
+		</script>
 
     </body>
 </html>
