--- a/css/style.css
+++ b/css/style.css
@@ -272,6 +272,7 @@ paragraphs
 */
 p { line-height: 1.5; margin: 0 0 1em; }
 
+@media screen and (min-width: 40em) { p { font-size: 1.125em; } }
 .indent p + p { text-indent: 2em; margin-top: 1em; }
 
 p.lead { font-size: 1.4em; font-family: "Raleway", Helvetica, Arial, sans-serif; }
@@ -290,6 +291,9 @@ a { text-decoration: none; }
 a:visited { text-decoration: underline; }
 
 a:hover { text-decoration: none; }
+
+a.style1 { color: #2ecc71; }
+a.style1:hover { border-bottom: 1px solid #ddd; }
 
 /* if you want to get specific with your links */
 a[href$=".zip"] { color: tomato; }
@@ -404,7 +408,7 @@ img { max-width: 100%; height: auto; }
 /* global padding */
 .module, .header, .footer { padding-top: 2em; padding-bottom: 2em; }
 
-.module3, .main, .works { padding-top: 3em; padding-bottom: 3em; }
+.module3, .skills, .main, .works { padding-top: 3em; padding-bottom: 3em; }
 
 /* text color */
 .text-green { color: #2ecc71; }
@@ -426,7 +430,7 @@ body { background: #fff; }
 .menu li { display: inline-block; position: relative; margin: 0 1em 0 0; padding: 0; }
 .menu li:last-of-type { margin-right: 0; }
 .menu li a { padding: 0.6em; display: inline-block; text-transform: uppercase; font-family: inherit; font-weight: 400; font-size: 0.9em; color: #444444; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
-.menu li a:hover { color: #2ecc71; }
+.menu li a:hover, .menu li a.current { color: #2ecc71; }
 
 /* Hero style */
 .hero { padding-top: 5%; padding-bottom: 5%; background: #2ecc71; }
@@ -435,16 +439,22 @@ body { background: #fff; }
 .hero h2 { font-family: "Raleway", Helvetica, Arial, sans-serif; font-weight: 300; }
 
 /* Skills style */
+.skills { background: #f8f8f8; }
+.skills p { text-align: left; }
+.skills p a { color: #2ecc71; }
+.skills p a:hover { border-bottom: 1px solid #ddd; }
+.skills li { margin-bottom: 0.4em; padding-left: 0.4em; }
+
 /* Blog style */
 .main { background: #f8f8f8; min-height: 100%; }
 .main h1 { color: #2ecc71; font-family: "Raleway", Helvetica, Arial, sans-serif; font-weight: 300; }
 .main h2 a { color: #333333; -webkit-transition: all 0.2s ease; -moz-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
 .main h2 a:hover { color: #2ecc71; }
 .main p { line-height: 1.8; }
-.main article { display: block; position: relative; margin-bottom: 2em; }
+.main .posts { display: block; position: relative; margin-bottom: 4em; }
+.main .meta { font-family: inherit; font-weight: 700; font-size: 0.9em; text-transform: uppercase; letter-spacing: 1px; color: #666; margin-top: 0; }
 
-@media screen and (min-width: 40em) { .main article h2 { font-size: 2.2em; }
-  .main p { font-size: 1.125em; } }
+@media screen and (min-width: 40em) { .main .posts h2 { font-size: 2.2em; } }
 /* Works style */
 .works { text-align: center; background: #f8f8f8; }
 .works h1 { color: #2ecc71; }
@@ -457,6 +467,10 @@ body { background: #fff; }
 .footer a:hover { border-bottom: 1px solid #ddd; }
 
 @media only screen and (min-width: 40em) { .footer p { text-align: right; } }
+/* Disqus */
+#disqus_thread { margin-top: 2em; }
+#disqus_thread a { color: #2ecc71; }
+
 /** Social */
 .social .tw { color: #00ACED; }
 .social .fb { color: #3B5998; }
