--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,10 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/style.css">
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css">
-
+		
+		<link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/atelier-heath.light.min.css">
+		<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
+		
     </head>
     <body>
 
@@ -59,6 +62,7 @@
         </footer>
         
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script>hljs.initHighlightingOnLoad();</script>
 		<script type="text/javascript">
 		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 		var disqus_shortname = 'mithicher-github'; // required: replace example with your forum shortname
