--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="/css/style.css">
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css">
 		
-		<link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/atelier-heath.light.min.css">
+		<link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/rainbow.min.css">
 		<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
 		
     </head>
