--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,10 +12,12 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/style.css">
-		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css">
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
+        <link rel="stylesheet" href="/css/animate.min.css">
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.0/animate.min.css">
 		
-		<link rel="stylesheet" href="http://yandex.st/highlightjs/8.0/styles/rainbow.min.css">
-		<script src="http://yandex.st/highlightjs/8.0/highlight.min.js"></script>
+		<link rel="stylesheet" href="//yandex.st/highlightjs/8.0/styles/rainbow.min.css">
+		<script src="//yandex.st/highlightjs/8.0/highlight.min.js"></script>
 		
     </head>
     <body>
@@ -30,9 +32,9 @@
                 
                     <nav class="nav">
                         <ul>
-                            <li class="menu-item"><a class="{% if page.url == '/index.html' %}current{% endif %}" href="/">Blog</a></li>
-                            <li class="menu-item"><a class="{% if page.url == '/about-me.html' %}current{% endif %}" href="/about-me.html">About me</a></li>
-							<li class="menu-item"><a href="/mithicherbaro.pdf">Resume</a></li>
+                            <li><a class="{% if page.url == '/index.html' %}active{% endif %}" href="/">Blog</a></li>
+                            <li><a class="{% if page.url == '/about-me.html' %}active{% endif %}" href="/about-me.html">About me</a></li>
+							<li><a href="/mithicherbaro.pdf">Resume</a></li>
                             <!--<li class="menu-item"><a class="{% if page.url == 'index.html' %}current{% endif %}" href="/archives.html">Archives</a></li>-->
                         </ul>
                     </nav>
@@ -65,6 +67,15 @@
 		<script>hljs.initHighlightingOnLoad();</script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/navigation.js"></script>
+        <script src="js/wow.min.js"></script>    
+        <script>
+            new WOW().init();
+        </script>
+        <script>
+            //$('#hero-content').addClass('animated bounceInLeft');
+        </script>
+        
+
 		<script type="text/javascript">
 		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 		var disqus_shortname = 'mithicher-github'; // required: replace example with your forum shortname
@@ -77,11 +88,7 @@
 			(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
 		}());
 		</script>
-		
-		<script>
-			$('#hero-content').addClass('animated bounceInLeft');
-		</script>
-		
+	
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
