--- a/sass/modules/_skills.scss
+++ b/sass/modules/_skills.scss
@@ -3,6 +3,7 @@
 	position: relative;
 	max-width: 100%;
 	overflow: hidden;
+	margin-top: 1em;
 	margin-bottom: 1em;
 	top: 0;
 	@include transition(top 0.35s ease-out);
@@ -16,6 +17,7 @@
 		margin-bottom: 0.325em;
 		line-height: 80px;
 		text-align: center;
+		font-family: $font-heading;
 		font-size: 1.2em;
 		@include border-radius(40px);
 		background-color: $bgcolor2;
