--- a/sass/base/_normalize.scss
+++ b/sass/base/_normalize.scss
@@ -1,6 +1,8 @@
-/*----------------------------------------------------- 
-  Normalize
------------------------------------------------------*/
+/**
+ * ----------------------------------------------------------------------------------------
+ * Normalize.
+ * ----------------------------------------------------------------------------------------
+ */
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 
 /**
