--- a/sass/fonts/_font.scss
+++ b/sass/fonts/_font.scss
@@ -1,8 +1,8 @@
-/*----------------------------------------------------- 
-	Fonts 
+/*-----------------------------------------------------
+	Fonts
 -----------------------------------------------------*/
 @font-face {
-  font-family: 'Lato-Bold';
+  font-family: "Lato-Bold";
   src: url('../fonts/Lato-Bold.eot');
   src: url('../fonts/Lato-Bold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/Lato-Bold.woff') format('woff'),
@@ -11,11 +11,21 @@
 }
 
 @font-face {
-  font-family: 'Lato-Light';
+  font-family: "Lato-Light";
   src: url('../fonts/Lato-Light.eot');
   src: url('../fonts/Lato-Light.eot?#iefix') format('embedded-opentype'),
        url('../fonts/Lato-Light.woff') format('woff'),
        url('../fonts/Lato-Light.ttf') format('truetype'),
        url('../fonts/Lato-Light.svg#Lato-Light') format('svg');
+}
+
+@font-face {
+  font-family:"Lato-Regular";
+  src: url("../fonts/Lato-Regular.eot?") format("eot"),
+       url("../fonts/Lato-Regular.woff") format("woff"),
+       url("../fonts/Lato-Regular.ttf") format("truetype"),
+       url("../fonts/Lato-Regular.svg#Lato-Regular") format("svg");
+  font-weight:normal;
+  font-style:normal;
 }
 
