--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,104 +1,68 @@
-/*----------------------------------------------------- 
-	Navigation
+/*-----------------------------------------------------
+  Nav
 -----------------------------------------------------*/
-
 .nav {
-	float: none;
-}
-
-.nav ul {
-	display: none;
-	position: absolute;
-	left: 0;
-	right: 0;
-	top: 100%;
-	width: 100%;
-	z-index: 2;
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	background-color: darken($green, 2%);
-	border-top: 1px solid darken($green, 5%);
-}
-
-	.nav li {
-		display: block;
+	//float: none;
+	margin-top: $baseline;
+	@include MQ(S) {
+		//float: right;
+		margin-top: 0;
+	}
+	.menu {
+		margin: 0;
+		padding: 0;
 		list-style: none;
-		border-bottom: 1px solid darken($green, 5%);
-	}
-	.nav li a {
-		display: block;
-		padding: 0.825em 1em;
-		text-decoration: none;
-		text-transform: uppercase;
-		border: 0;
-		font-family: inherit;
-		font-weight: 600;
-		font-size: 0.875em;
-		color: $white;
+		float: none;
+		@include MQ(S) {
+			float: right;
+		}
+	 
 
-		-webkit-transition: all 0.35s ease-out;
-		-moz-transition: all 0.35s ease-out;
-		-ms-transition: all 0.35s ease-out;
-		-o-transition: all 0.35s ease-out;
-		transition: all 0.35s ease-out;
-	}
-	.nav li a:hover {
-		border: 0;
-		color: darken($green, 10%);
-	}
-
-	.nav li a.active {
-		color: darken($green, 10%);
-	}
-
-/* Toggle menu */
-.toggle-menu {
-	width: 40px;
-	height: 80px;
-	display: block;
-	float: right; 
-	text-decoration: none;
-	text-transform: uppercase;
-	cursor: pointer;
-	color: #777;
-	background: url(../img/hamburger-menu.svg) no-repeat center center;
-	border: 0;
-	font: 0/0 a;
-	background-color: transparent;
-	z-index: 2;
-}
-.toggle-menu:hover {
-	border: 0;
-}
-
-
-@include MQ(S) {
-	
-	.nav {
-		float: right;
-		line-height: 80px;
-	}
-	.nav ul {
-		border-top: 0;
-		display: block;
-		position: static;
-		background-color: transparent;
-	}
-		.nav li {
+		.menu-item {
 			display: inline-block;
-			border-bottom: 0;
-		}
-		.nav li a {
-			font-weight: 600;
-			 
-			display: block;
-			height: auto;
-			line-height: normal;
+			text-align: center;
+			margin-right: 2em;
+
+			&::last-child {
+				margin-right: 0em;
+			}
+
+			@include MQ(S) {
+				display: inline-block;
+				margin-left: 1em;
+				margin-right: 0;
+			}
+
+			a {
+				display: block;
+				//padding: 0.325em 0;
+				font-family: inherit;
+				font-size: 1em;
+				font-weight: 400;
+				color: $color-text-light;
+				@include transition(all 0.35s ease-out);
+				@include MQ(S) { 
+					font-size: 1em;
+				}
+				&:hover {
+					color: $primary-color;
+				}
+
+				&.active {
+					color: $primary-color;
+					border-top: 2px solid $primary-color;
+				}
+			}
+
+			.twitter {
+				color: #00ACED;
+				//@include box-shadow(0 0 0 2px #00ACED inset);
+				// &:hover {
+				// 	background-color: #00ACED;
+				// 	color: #fff;
+				// }
+			}
 		}
 
-	/* Toggle-menu */
-	.toggle-menu {
-		display: none;
 	}
 }
