--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,6 @@
-/*------------------------------------------------------------------------- 
-	Author: Mithicher Baro
-	This framework is inspired by Jonathan Path's framework.
-	Many Many thanks!
-	https://github.com/jonathanpath/SASS-SMACSS
---------------------------------------------------------------------------*/
+/*-----------------------------------------------------
+	style.scss
+-----------------------------------------------------*/
 
 /* Compass */
 @import "compass";
@@ -17,6 +14,7 @@
 @import "base/normalize";
 
 /* Fonts */
+@import "http://fonts.googleapis.com/css?family=Roboto:400,400italic,700";
 @import "fonts/font";
 
 /* Modules */
@@ -26,13 +24,14 @@
 @import "modules/dividers";
 @import "modules/typography";
 @import "modules/lists";
-@import "modules/folded-corners";
-@import "modules/well";
-@import "modules/skills";
 
 /* Layout */
 @import "layout/nav";
 @import "layout/hero";
 
-/* Theme */
+/* Layout */
 @import "theme/theme";
+
+
+
+
